--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" href="./favicon.ico">
 
   <title>Incorrect Quotes</title>
   <link rel="manifest" href="manifest.json">
@@ -24,7 +24,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1459354699');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=4167842570');
       });
     }
   </script>
@@ -49,6 +49,6 @@
     firebase.initializeApp(firebaseConfig);
   </script>
 
-  <script src="main.dart.js?v=1459354699" type="application/javascript"></script>
+  <script src="main.dart.js?v=4167842570" type="application/javascript"></script>
 </body>
 </html>
