--- a/flutter source code/web/index.html
+++ b/flutter source code/web/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" href="./favicon.ico">
 
   <title>Incorrect Quotes</title>
   <link rel="manifest" href="manifest.json">
