--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="BHR Incorrect Quotes">
+	<meta name="keywords" content="Garv, Shah, Garv Shah, Refus, RefusScrimingour, Scrimingour, Dev, Landing, Page, Web, Website, BHR, BHRs, Quotes, Incorrect, Incorrect Quotes, BHR Incorrect Quotes, BHRs Incorrect Quotes">
+	<meta name="author" content="Garv Shah">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
