moved base href

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
 
   <title>Incorrect Quotes</title>
   <link rel="manifest" href="manifest.json">
+  <base href="$FLUTTER_BASE_HREF">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
