--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="BHR Incorrect Quotes">
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="$FLUTTER_BASE_HREF">
+
   <meta name="keywords" content="Garv, Shah, Garv Shah, Dev, Landing, Page, Web, Website, BHR, BHRs, Quotes, Incorrect, Incorrect Quotes, BHR Incorrect Quotes, BHRs Incorrect Quotes">
   <meta name="author" content="Garv Shah">
+
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,44 +30,32 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.ico"/>
 
   <title>Incorrect Quotes</title>
   <link rel="manifest" href="manifest.json">
-  <base href="$FLUTTER_BASE_HREF">
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 <body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=4167842570');
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        }
+      }).then(function(engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function(appRunner) {
+        return appRunner.runApp();
       });
-    }
+    });
   </script>
-
-  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
-
-  <script>
-    // TODO: Replace the following with your app's Firebase project configuration.
-    // See: https://support.google.com/firebase/answer/7015592
-    var firebaseConfig = {
-      apiKey: "AIzaSyCDX9Wf7A69FCAeksL_ZnN1NPe_mQbaX1Y",
-      authDomain: "bhr-quotes.firebaseapp.com",
-      databaseURL: "https://bhr-quotes.firebaseio.com",
-      projectId: "bhr-quotes",
-      storageBucket: "bhr-quotes.appspot.com",
-      messagingSenderId: "883572288266",
-      appId: "1:883572288266:web:a2503699607717d0a468f3",
-      measurementId: "G-C8BFBKKG30"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
-
-  <script src="main.dart.js?v=4167842570" type="application/javascript"></script>
 </body>
 </html>
